Added register page

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,2 +1,8 @@
-<brain-header [theme]="themes.HEADER"></brain-header>
-<router-outlet></router-outlet>
+<brain-header class="h" [theme]="themes[router.routerState.snapshot.url]"></brain-header>
+<particles *ngIf="!sessionSet && !sessionEnabled"
+    [params]="styles.backgroundParams" 
+    [style]="styles.background" 
+    [width]="styles.backgroundWidth" 
+    [height]="styles.backgroundHeight">
+</particles>
+<router-outlet *ngIf="sessionSet"></router-outlet>
