--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -4,7 +4,7 @@
     [width]="styles.backgroundWidth" 
     [height]="styles.backgroundHeight">
 </particles>
-<div class="l_container" [ngStyle]="styles.authBrand">
+<div class="l_container" [ngStyle]="styles.authBrand" *ngIf="gotSessionInfo">
     <div class="l_b">
         <img src="/assets/images/Logo-animated.gif" alt="animated image of brain" class="l_b_image">
         <h2 class="l_b_title">Let brain take care of your data</h2>
