--- a/src/app/theme/components/header/header.component.html
+++ b/src/app/theme/components/header/header.component.html
@@ -1,4 +1,4 @@
 <header class="h">
   <img src="/assets/images/Logo.png" alt="cuttle.ai Logo" class="logo">
-  <span [ngStyle]="{'color': theme.PrimaryForegroundColor}" class="n">cuttle.ai</span>
+  <span [ngStyle]="{'color': theme.PrimaryTextColor}" class="n">cuttle.ai</span>
 </header>
