--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,7 @@ input[type=checkbox] + label {
 button {
     border-radius: 0.5vw;
     outline: none;
+    cursor: pointer;
 }
 
 .input_container {
