--- a/src/app/theme/components/header/header.component.scss
+++ b/src/app/theme/components/header/header.component.scss
@@ -15,3 +15,55 @@
     align-items: center;
     margin-left: 0.5vw;
 }
+
+/* header profile */
+.h_p {
+    position: fixed;
+    top: 0.5vw;
+    right: 0.5vw;
+    display: flex;
+    align-items: center;
+    padding: 0.2vw 0.5vw;
+    border-radius: 0.5vw;
+    cursor: pointer;
+}
+
+.h_p_image {
+    width: 2vw;
+    height: 2vw;
+    border-radius: 50%;
+}
+
+.h_p_name {
+    margin: 0 0.5vw;
+}
+
+/* heaer profile options */
+.h_p_o {
+    list-style: none;
+    position: fixed;
+    right: 0.5vw;
+    top: 2.8vw;
+    width: 4vw;
+    height: 0;
+    padding-left: 0;
+}
+
+.h_p_o_item {
+    font-size: 0;
+    padding: 0;
+    border-radius: 0.5vw;
+    pointer-events: none;
+    transition: font-size cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s, padding cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s;
+}
+
+.h_p_o--visible {
+    height: auto;
+    .h_p_o_item {
+        font-size: 0.8vw;
+        padding: 0.3vw 0.5vw;
+        pointer-events: all;
+        cursor: pointer;
+        transition: font-size cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s, padding cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s;
+    }
+}
