--- a/src/app/theme/components/header/header.component.scss
+++ b/src/app/theme/components/header/header.component.scss
@@ -1,3 +1,4 @@
+@import '../../../../styles';
 .logo {
     width: 4vw;
     height: 4vw;
@@ -6,7 +7,9 @@
 /* header */
 .h {
     display: flex;
-    padding: 0.5vw;
+    position: fixed;
+    top: 0.5vh;
+    left: 0.5vw;
 }
 
 /* name of the org */
@@ -19,13 +22,14 @@
 /* header profile */
 .h_p {
     position: fixed;
-    top: 0.5vw;
+    top: 0.5vh;
     right: 0.5vw;
     display: flex;
     align-items: center;
     padding: 0.2vw 0.5vw;
     border-radius: 0.5vw;
     cursor: pointer;
+    @include shadow;
 }
 
 .h_p_image {
@@ -55,6 +59,7 @@
     border-radius: 0.5vw;
     pointer-events: none;
     transition: font-size cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s, padding cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s;
+    @include shadow;
 }
 
 .h_p_o--visible {
@@ -65,5 +70,59 @@
         pointer-events: all;
         cursor: pointer;
         transition: font-size cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s, padding cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s;
+    }
+}
+
+/* menu */
+.m {
+    position: fixed;
+    top: 8vh;
+    left: 5vw;
+    border-radius: 50%;
+    width: 2vw;
+    height: 2vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.8vw;
+    cursor: pointer;
+    @include shadow;
+}
+
+/* menu list */
+.m_l {
+    position: fixed;
+    top: 8vh;
+    left: 8vw;
+    display: flex;
+    flex-direction: column;
+}
+
+.m_l_item {
+    border-radius: 0.5vw;
+    margin-bottom: 0.4vw;
+    font-size: 0;
+    width: 0;
+    padding: 0;
+    pointer-events: none;
+    opacity: 0;
+    text-decoration: none;
+    transition: font-size cubic-bezier(0.075, 0.82, 0.165, 1) 0s 0s, opacity cubic-bezier(0.075, 0.82, 0.165, 1) 0s 0.1s, padding cubic-bezier(0.075, 0.82, 0.165, 1) 0.1s 0.2s, width cubic-bezier(0.075, 0.82, 0.165, 1) 0.1s 0.2s;
+    @include shadow;
+}
+
+.m_l_icon {
+    margin-right: 0.2vw;
+}
+
+.m_l--visible {
+    .m_l_item {
+        width: 6vw;
+        font-size: 0.8vw;
+        padding: 0.3vw 0.5vw;
+        pointer-events: all;
+        opacity: 1;
+        cursor: pointer;
+        transition: padding cubic-bezier(0.075, 0.82, 0.165, 1) 0s 0.2s, width cubic-bezier(0.075, 0.82, 0.165, 1) 0s 0.2s, font-size cubic-bezier(0.075, 0.82, 0.165, 1) 0.2s 0s, opacity cubic-bezier(0.075, 0.82, 0.165, 1) 0.2s 0.1s;
     }
 }
