--- a/src/app/theme/components/page/page.component.html
+++ b/src/app/theme/components/page/page.component.html
@@ -1,3 +1,6 @@
 <div class="p-c" [ngStyle]="style">
-  <ng-content></ng-content>
+  <h1 class="p-t" *ngIf=title>{{title}}</h1>
+  <section class="p-content">
+      <ng-content></ng-content>
+  </section>
 </div>
