Integrated with nebular theme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<!-- We simply route everything ot the router -->
-<router-outlet></router-outlet>
+<nb-layout>
+
+  <nb-layout-column class="no-padding">
+    <!-- We simply route everything ot the router -->
+    <router-outlet></router-outlet>
+  </nb-layout-column>
+
+</nb-layout>
