--- a/src/app/pages/data/connect-sources/connect-sources.component.scss
+++ b/src/app/pages/data/connect-sources/connect-sources.component.scss
@@ -60,6 +60,18 @@
     }
 }
 
+.s_l_i_c {
+    width: 10vw;
+    height: 15vh;
+    margin: 1vh 1vw;
+}
+
+.s_l_i_body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .s_l_i_title {
     height: 20%;
     padding-left: 10%;
