--- a/src/app/theme/components/header/header.component.scss
+++ b/src/app/theme/components/header/header.component.scss
@@ -56,6 +56,7 @@
 .h_p_o_item {
     font-size: 0;
     padding: 0;
+    height: 0;
     border-radius: 0.5vw;
     pointer-events: none;
     transition: font-size cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s, padding cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s;
@@ -65,6 +66,7 @@
 .h_p_o--visible {
     height: auto;
     .h_p_o_item {
+        height: auto;
         font-size: 0.8vw;
         padding: 0.3vw 0.5vw;
         pointer-events: all;
