--- a/src/app/pages/data/datasets/dataset/dataset.component.html
+++ b/src/app/pages/data/datasets/dataset/dataset.component.html
@@ -23,13 +23,25 @@
                     <div class="d_mc_d_info_item">
                         <span class="d_mc_d_prop">Actions Required
                         </span><span>:
-                            <button nbButton status="info"
+                            <button nbButton status="info" class="d_mc_d_btn"
                                 (click)="validateFile(_get(dataset, ['UploadedDataset', 'Info', 'ID'], 0))">Validate
                                 data</button>
+                            <button nbButton status="warning" class="d_mc_d_btn"
+                                (click)="openFileUploadModal(_get(dataset, ['UploadedDataset', 'Info', 'ID'], 0), _get(dataset, ['UploadedDataset', 'Info', 'Type']))">Update
+                                file</button>
                         </span>
                     </div>
                 </section>
             </nb-card-body>
         </nb-card>
+
+
+        <div class="f_u_m {{reupload?'f_u_m--enabled':''}}" *ngIf="reupload">
+            <i class="f_u_m_close fa fa-times" (click)="closeFileUploadModal()"></i>
+            <div class="f_u_m_u">
+                <brain-fileupload [action]="reuploadSource.URL" [acceptedFileTypes]="reuploadSource.acceptedFileTypes">
+                </brain-fileupload>
+            </div>
+        </div>
     </div>
 </brain-page>
