Integrated with API to show the errors

--- a/src/app/pages/data/connect-sources/connect-sources.component.html
+++ b/src/app/pages/data/connect-sources/connect-sources.component.html
@@ -18,7 +18,8 @@
         <i class="f_u_m_close fa fa-times" (click)="toggleFileSource()"></i>
         <div class="f_u_m_u">
             <brain-fileupload [action]="'/datasourceapi/v1/upload'"
-                [acceptedFileTypes]="selectedSource.acceptedFileTypes"></brain-fileupload>
+                [acceptedFileTypes]="selectedSource.acceptedFileTypes" (fileuploaded)="gotoDatasets()">
+            </brain-fileupload>
         </div>
     </div>
 </brain-page>
