--- a/src/app/theme/components/header/header.component.scss
+++ b/src/app/theme/components/header/header.component.scss
@@ -56,6 +56,7 @@
 .h_p_o_item {
     font-size: 0;
     padding: 0;
+    margin-bottom: 1vh;
     height: 0;
     border-radius: 0.5vw;
     pointer-events: none;
