--- a/src/app/pages/data/datasets/dataset/dataset.component.html
+++ b/src/app/pages/data/datasets/dataset/dataset.component.html
@@ -13,6 +13,8 @@
                         file</button>
                     <button nbButton status="default" class="d_mc_d_btn" *ngIf="dataset.Source === 'FILE'"
                         (click)="processFile((uploadedFile.ID || 0))">Process file</button>
+                    <button nbButton status="info" class="d_mc_d_btn" *ngIf="dataset.Source === 'FILE'"
+                        (click)="uplloadToDatastore((uploadedFile.ID || 0))">Upload to Datastore</button>
                 </div>
             </nb-card-header>
             <nb-card-body>
