--- a/src/app/theme/components/header/header.component.scss
+++ b/src/app/theme/components/header/header.component.scss
@@ -120,7 +120,7 @@
 
 .m_l--visible {
     .m_l_item {
-        width: 6vw;
+        width: auto;
         font-size: 0.8vw;
         padding: 0.3vw 0.5vw;
         pointer-events: all;
