--- a/src/app/pages/data/datasets/datasets.component.html
+++ b/src/app/pages/data/datasets/datasets.component.html
@@ -9,7 +9,10 @@
                 <nb-card-header>{{upload.Name}}</nb-card-header>
                 <nb-card-body>
                     <nb-badge [text]="upload.Source" status="danger" position="top right"></nb-badge>
-                    <button nbButton (click)="navigateTo(['pages', 'data', 'dataset', upload.ID])">View</button>
+                    <button nbButton (click)="navigateTo(['pages', 'data', 'dataset', upload.ID])"
+                        class="d_mc_uc_u_btn">View</button>
+                    <button nbButton status="danger" (click)="deleteDataset(upload.ID)"
+                        class="d_mc_uc_u_btn">Delete</button>
                 </nb-card-body>
             </nb-card>
         </div>
