--- a/src/app/theme/components/search/search.component.html
+++ b/src/app/theme/components/search/search.component.html
@@ -1,4 +1,5 @@
-<div class="c">
-  <input type="search" class="c_s">
-  <nb-icon icon="search-outline"></nb-icon>
+<div class="c {{focusState?'focused':''}}" [nbSpinner]="loading">
+  <input type="search" class="c_s" (click)="focus(true)" (keydown)="keydown($event)">
+  <nb-icon class="c_c_i" icon="close-outline" *ngIf="focusState" (click)="focus(false)"></nb-icon>
+  <nb-icon class="c_s_i" icon="search-outline" (click)="focus(true)"></nb-icon>
 </div>
