--- a/src/app/theme/components/search/search.component.scss
+++ b/src/app/theme/components/search/search.component.scss
@@ -67,3 +67,14 @@
     background: #07051a;
     color: white;
 }
+
+/* visualization container */
+.v_c {
+    position: fixed;
+    top: 15%;
+    left: 10%;
+    width: 80%;
+    height: 60%;
+    background: white;
+    border-radius: 20px;
+}
