--- a/src/app/pages/data/datasets/dataset/dataset.component.scss
+++ b/src/app/pages/data/datasets/dataset/dataset.component.scss
@@ -29,6 +29,8 @@
 
 .d_mc_d_columns {
     margin: 0.2vh 1vw;
+    height: 50vh;
+    overflow: auto;
 }
 
 /* datasets main container dataset column */
