--- a/src/app/theme/components/search/search.component.html
+++ b/src/app/theme/components/search/search.component.html
@@ -1,9 +1,11 @@
-<div class="c {{focusState?'focused':''}}" [nbSpinner]="loading">
-  <input type="search" class="c_s" (click)="focus(true)" (keydown)="keydown($event)">
-  <nb-icon class="c_c_i" icon="close-outline" *ngIf="focusState" (click)="focus(false)"></nb-icon>
-  <nb-icon class="c_s_i" icon="search-outline" (click)="focus(true)"></nb-icon>
-</div>
+<section class="{{focusState?'s_c':''}}">
+  <div class="c {{focusState?'focused':''}}" [nbSpinner]="loading">
+    <input type="search" class="c_s" (click)="focus(true)" (keyup)="keyup($event)">
+    <nb-icon class="c_c_i" icon="close-outline" *ngIf="focusState" (click)="focus(false)"></nb-icon>
+    <nb-icon class="c_s_i" icon="search-outline" (click)="search()"></nb-icon>
+  </div>
 
-<div class="v_c" *ngIf="queryResult">
-  <lib-visualizations [queryResult]="queryResult"></lib-visualizations>
-</div>
+  <div class="v_c" *ngIf="queryResult && focusState">
+    <lib-visualizations [queryResult]="queryResult"></lib-visualizations>
+  </div>
+</section>
