--- a/src/app/theme/components/search/search.component.scss
+++ b/src/app/theme/components/search/search.component.scss
@@ -77,4 +77,15 @@
     height: 60%;
     background: white;
     border-radius: 20px;
+    padding: 1vh 1vw;
+}
+
+/* search container */
+.s_c {
+    height: 100vh;
+    width: 100vw;
+    background: rgba(172, 172, 172, 0.8);
+    position: fixed;
+    top: 0;
+    right: 0;
 }
